added a delete endpoint
